# mame

./: .gitignore  .wasm_build_mode  DEPLOYMENT.md  README-cloudflare.md  README.md  Star_Wars_ROM_to_C_Conversion_Roadmap.md  Vector_CRT_Emulation_Documentation.md  build_web.sh  console_capture.txt  deploy_web.sh  index.html  package-lock.json  package.json  probe_console.js  roms.data  roms.js  serve.mjs  starwarswasm.html  starwarswasm.js  starwarswasm.wasm.br  starwarswasm.worker.js
scripts/: toolchain.lua
scripts/src/: 3rdparty.lua  main.lua
scripts/src/osd/: modules.lua
src/devices/video/: vector.cpp  vector.h
src/osd/modules/lib/: osdobj_common.cpp
src/osd/modules/render/: drawogl.cpp
starwars_analysis/: ADDRESS_MATCHING_GUIDE.md  CORRECTED_ADDRESS_MATCHING.md  DEMONSTRATION_SUMMARY.md  FINAL_SOLUTION.md  IMPLEMENTATION_COMPLETE.md  PRACTICAL_DEMONSTRATION.md  TODO  analyze_roms.py  assembly_to_cpp_converter.py  assembly_to_cpp_report.md  comprehensive_analyzer.py  cpp_conversion_plan.md  detailed_analysis_report.md  final_summary.md  ghidra_analysis_guide.md  ghidra_analysis_notes.md  mame_trace_wp.txt  next_steps_summary.md  normalize_mame_trace.py  prepare_roms.py  prepare_roms_simple.py  rom_analysis_report.md  rom_disasm_cd9e_unidasm.md  rom_disasm_cdc3_unidasm.md  rom_disasm_d91a_enhanced.md  rom_file_mapping.md  starwars_game.h  unknown_addresses.txt  webassembly_implementation_plan.md  webassembly_strategy.md
starwars_analysis/archive/: README.md
starwars_analysis/archive/old_implementation/: README.md
starwars_analysis/archive/old_implementation/disassembly/: rom_disasm_6ea2_unidasm.md  rom_disasm_70bd_unidasm.md  rom_disasm_cdc3_unidasm.md  rom_disasm_d91a_unidasm.md
starwars_analysis/archive/old_implementation/starwars_cpp/: browser_interface.h  input_system.cpp  mathbox.cpp  memory_manager.h  sound_system.h  starwars.h  starwars_game.h  vector_graphics.h
starwars_analysis/disassembly/: debugger.cmd  debugger_f261.cmd  entry_points.txt  rom_disasm_6005.md  rom_disasm_6005_6036.md  rom_disasm_6036.md  rom_disasm_6036_6067.md  rom_disasm_60be.md  rom_disasm_60be_60ca.md  rom_disasm_60ca_60f4.md  rom_disasm_60f4_623c.md  rom_disasm_6112.md  rom_disasm_6112_611d.md  rom_disasm_6112_unidasm.md  rom_disasm_611e.md  rom_disasm_611e_612e.md  rom_disasm_611e_unidasm.md  rom_disasm_612f.md  rom_disasm_612f_6159.md  rom_disasm_615a.md  rom_disasm_615a_6160.md  rom_disasm_6161.md  rom_disasm_61b5.md  rom_disasm_61b5_61eb.md  rom_disasm_61ec.md  rom_disasm_620f.md  rom_disasm_620f_622c.md  rom_disasm_622d.md  rom_disasm_623c_624b.md  rom_disasm_624b_640e.md  rom_disasm_62d5.md  rom_disasm_62d5_62e3.md  rom_disasm_62d5_unidasm.md  rom_disasm_6368.md  rom_disasm_6368_unidasm.md  rom_disasm_63d5.md  rom_disasm_63d5_6458.md  rom_disasm_640e_6458.md  rom_disasm_64a6_64c9.md  rom_disasm_64c9_6512.md  (+644 more)
starwars_analysis/docs/: DISASSEMBLY_BEST_PRACTICES.md  UNIDASM_MANUAL.md
starwars_analysis/docs/core/: MAME_DEBUGGER_QUIRKS.md  TOOL_DOCUMENTATION.md  rom_file_mapping.md
starwars_analysis/docs/guides/: implementation_plan.md
starwars_analysis/docs/reports/: next_steps_summary.md
starwars_analysis/starwars_cpp/: CMakeLists.txt  CMakeLists_wasm.txt  README.md  build_wasm.sh  input_system.h  main.cpp  mame_trace_wp.txt  mathbox.cpp  mathbox.h  memory_manager.cpp  sound_system.cpp  starwars.cpp  starwars.h  starwars_game.cpp  starwars_game.h  vector_graphics.cpp  vector_graphics.h
starwars_analysis/starwars_cpp_v2/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md
starwars_analysis/starwars_cpp_v2/include/: cpu_6809.h  cpu_6809_hardware.h  starwars_hardware.h
starwars_analysis/starwars_cpp_v2/src/: cpu_6809.cpp  cpu_6809_hardware.cpp  example_usage.cpp  global_routine.cpp  main.cpp  rom_routines_wrapper.cpp  routine_6005.cpp  routine_6005_6036.cpp  routine_6036.cpp  routine_6036_6067.cpp  routine_60be.cpp  routine_60be_60ca.cpp  routine_60ca_60f4.cpp  routine_60f4_623c.cpp  routine_6112.cpp  routine_611e.cpp  routine_612f.cpp  routine_615a.cpp  routine_6161.cpp  routine_61b5.cpp  routine_61ec.cpp  routine_620f.cpp  routine_622d.cpp  routine_623c_624b.cpp  routine_624b_640e.cpp  routine_62d5.cpp  routine_6368.cpp  routine_63d5.cpp  routine_640e_6458.cpp  routine_64a6_64c9.cpp  routine_64c9_6512.cpp  routine_64cd.cpp  routine_6512_655d.cpp  routine_655d_656b.cpp  routine_656b_6586.cpp  routine_6586_6592.cpp  routine_65bd_666f.cpp  routine_66ce_66e3.cpp  routine_66e3_681e.cpp  routine_670d.cpp  (+498 more)
starwars_analysis/starwars_cpp_v2/src/.unsure/: routine_f70d.cpp  routine_f714.cpp  routine_f720.cpp  routine_fb38.cpp  routine_fd07.cpp  routine_feff.cpp  routine_ff24.cpp
starwars_analysis/tools/: automated_disassembler.py  batch_cpp_converter.py  build_updater.py  convert_routines_for_integration.py  disasm_to_cpp_converter.py  disassemble_routine.py  dynamic_routine_loader.py  fix_generated_routines.py  hot_reload_routines.py  improved_disasm_to_cpp_converter.py  normalize_mame_trace.py  parse_mame_trace.py  prepare_roms.py  regenerate_all_routines.py  unidasm_wrapper.py  validate_disassembly.py
starwars_analysis/tools/legacy/: disasm_d91a.py  disasm_to_cpp_converter.py  disassambler.py  reorganize_directory.py
webdist/: README-cloudflare.md  autoboot.lua  probe_console.js  starwarswasm.worker.js
webdist/cloudflare-worker/: package.json  worker.mjs  wrangler.toml
